# openai-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/response_types/: answer.rs  classification.rs  completion.rs  mod.rs
src/supporting_types/: engine.rs  file.rs  mod.rs  sampling.rs
