[package]
name = "openai-rs"
version = "0.1.0"
edition = "2021"
authors = ["Sasha Prokhorenko <warbles.lieu_04@icloud.com>"]
description = "A Rust client for the OpenAI API"
homepage = "https://github.com/minikin/openai-rs"
repository = "https://github.com/minikin/openai-rs"
license-file = "LICENSE"

[dependencies]
derive_builder = "0.11.2"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.81" }
thiserror = "1.0.30"
tokio = { version = "1.19.1", features = ["full"] }

[dev-dependencies]
mockito = "0.31.0"
